<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:clickable="true"
            android:id="@+id/ll_msg_root"
            android:background="@drawable/ripple_item_clicked_with_mask"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@id/iv_avatar"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@mipmap/ic_user"
                android:layout_marginRight="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">
            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/font_black_2"
                android:text="reese"/>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                    android:layout_marginTop="5dp"
                android:textColor="@color/font_black_4"
                android:text="查看或编辑个人信息"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_item_clicked_with_mask"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@mipmap/ic_action_heart" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/str_my_collect"
                    android:textColor="@color/font_black_3"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                style="@style/divider_view"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp" />

            <LinearLayout
                android:id="@+id/ll_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_item_clicked_with_mask"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@mipmap/ic_action_share" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/str_share"
                    android:textColor="@color/font_black_3"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                style="@style/divider_view"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp" />

            <LinearLayout
                android:id="@+id/ll_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_item_clicked_with_mask"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@mipmap/ic_action_setting" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/str_setting"
                    android:textColor="@color/font_black_3"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="300dp" />
</LinearLayout>